add cost function concept

--- a/regression/linear_regression.ipynb
+++ b/regression/linear_regression.ipynb
@@ -61,9 +61,14 @@
     "### $$ \\hat{y} = \\theta_0 * x_0 + \\theta_1 * x_1 + \\theta_2 * x_2 .....\\theta_n * x_n$$\n",
     "### $$ x_0 = 1 $$\n",
     "\n",
+    "$\\hat{y}$ 是我們線性回歸的模型(值)，當 $ y = \\hat{y}$ 代表 $\\hat{y}$ 是最佳的模型，但我們通常喜歡以成本函數來描述評估模型好壞的方式\n",
+    "### $$ Cost(\\hat{y}, y) = (\\hat{y} - y)^2$$\n",
+    "當Cost = 0，則 $ \\hat{y} = y $\n",
+    "\n",
     "### 以線性代數表達:\n",
     "\n",
-    "### $$ \\hat{y} = \\theta \\cdot X^T $$\n",
+    "### $$ y = \\hat{y} = \\theta \\cdot X^T $$\n",
+    "\n",
     "\n",
     "當我們轉換成矩陣後，我們可以很輕易的求出矩陣 $\\theta$:\n",
     "\n",
