fix images showing

--- a/classification/svm.ipynb
+++ b/classification/svm.ipynb
@@ -16,28 +16,28 @@
     "SVM是一種監督式的學習方法，其基礎的概念非常簡單，就是找到一個決策邊界(decision boundary)讓兩類之間的邊界(margins)最大化，使其可以完美區隔開來。\n",
     "\n",
     "一般來說所謂的分類問題就是如何找到一條回歸線將資料分開，假設我們的資料只有2類，我們可能有無限多種的回歸線可以選擇: \n",
-    "<img src='imgs/boundary.jpg' width=500>\n",
+    "![](imgs/boundary.jpg)\n",
     "實際上每一條回歸線有好有壞，不好的回歸線可能非常貼近各類資料，以至於當有新的資料加入時會導致分類錯誤，所以我們希望回歸線能離過類資料越遠越好也就是margin越大越好，透過圖片我們可以發現決定margin大小的只有最外部的資料，我們叫這些資料為support vector:\n",
     "\n",
-    "<img src='imgs/margin.jpg' width=500>\n",
+    "![](imgs/margin.jpg)\n",
     "\n",
     "\n",
     "## 演算法\n",
     "\n",
     "有一個二維平面,平面上有兩種不同的數據,分別用圈和叉表示。 由於這些數據是線性可分的,所以可以用一條直線將這兩類數據分開,這條直線就相當於一個超平面,超平面一邊的數據點所對應的y全是-1 ,另一邊所對應的y全是1。\n",
     "\n",
-    "<img src='imgs/ex1.jpg' width=200>\n",
+    "![](imgs/ex1.jpg)\n",
     "\n",
     "這個超平面可以用分類函數表示,當f(x) 等於0的時候,x便是位於超平面上的點,而f(x)大於0的點對應 y=1 的數據點,f(x)小於0的點對應y=-1的點,如下圖所示:\n",
     "\n",
-    "<img src='imgs/ex1_margin.jpg' width=400>\n",
+    "![](imgs/ex1_margin.jpg)\n",
     "\n",
     "\n",
     "### 設計最大間隔類別器Maximum Margin Classifier\n",
     "\n",
     "對一個數據點進行分類,當超平面離數據點的\"間隔\"越大,分類的確信度(confidence)也越大。 所以,為了使得分類的確信度盡量高,需要讓所選擇的超平面能夠最大化這個「間隔」 值。 這個間隔就是下圖中的Gap的一半。\n",
     "\n",
-    "<img src='imgs/ex1_gap.jpg' width=400>\n",
+    "![](imgs/ex1_gap.jpg)\n",
     "\n",
     "OK,到此為止,算是瞭解到了SVM的第一層,對於那些只關心怎麼用SVM的朋友便已足夠,不必再更進一層深究其更深的原理。\n",
     "\n",
@@ -71,8 +71,8 @@
      "output_type": "stream",
      "text": [
       "147 / 150\n",
-      "label:  [ True  True False False  True False  True  True False False]\n",
-      "predict:  [ True  True False False  True False  True  True False False]\n"
+      "label:  [False False False False  True False  True False False False]\n",
+      "predict:  [False False False False  True False False False False False]\n"
      ]
     }
    ],
